<resources>
    <string name="app_name">瞬间</string>
    <string name="app_name_test">瞬间(test)</string>
    <string name="user_login">用户登录</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="cover_image">cover image</string>
    <string name="sample_text">这是示例文字</string>
    <string name="add_cover_hint">为你的Cover写点什么吧</string>
    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
    <string name="save">保存</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user">用户中心</string>
    <string name="user_center">用户中心</string>
    <string name="add_cover">添加</string>
    <string name="edit">编辑</string>
    <string name="admin">admin</string>
    <string name="default_password">123456</string>
    <string name="repeat_password">重复密码</string>
    <string name="user_Registered">用户注册</string>
    <string name="registered">注册</string>
    <string name="share">分享</string>
    <string name="at">\@</string>
    <string name="setting">设置</string>
    <string name="edit_main_bg">修改主页背景图</string>
    <string name="check_update">检查更新</string>
    <string name="out_login">退出登录</string>
    <string name="edit_password">修改密码</string>
    <string name="about">关于</string>
    <string name="music_name">歌曲名称</string>
    <string name="author">作者</string>
    <string name="comment_img">评论</string>
    <string name="username_password_cannot_empty">用户名密码不能为空</string>
    <string name="Iconsistent_password_entered_twice">两次输入的密码不一致</string>
</resources>
