<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@android:color/background_light"
        android:layout_height="match_parent">

    <TextView

            android:layout_marginTop="72dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:id="@+id/title_tv"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_login"/>

    <TextView
            android:id="@+id/username_title_tv"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="56dp"
            android:layout_marginTop="120dp"
            app:layout_constraintTop_toTopOf="@id/title_tv"
            android:text="@string/user_name"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <EditText
            android:text="西柚甜"
            android:inputType="textPersonName"
            android:id="@+id/username_et"
            android:layout_marginLeft="56dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="56dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username_title_tv"
            android:layout_width="match_parent"
            android:layout_height="48dp"/>

    <TextView
            android:id="@+id/userpass_title_tv"
            android:text="@string/password"
            android:layout_marginTop="16dp"
            android:layout_marginStart="56dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username_et"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <EditText
            android:text="123456"
            android:inputType="textPassword"
            android:id="@+id/userpass_et"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/userpass_title_tv"
            android:layout_marginLeft="56dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="56dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"/>

    <Button
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/userpass_et"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_btn"/>


</androidx.constraintlayout.widget.ConstraintLayout>
