<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_marginRight="8dp"
        android:background="?attr/selectableItemBackground"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="4dp"
        android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_height="wrap_content">
        <ImageView
                android:src="@drawable/default_avator"
                android:scaleType="centerCrop"
                android:contentDescription="@string/cover_image"
                android:id="@+id/cover_iv"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="0dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="match_parent"
                android:layout_height="220dp"/>
        <TextView
                android:textSize="8sp"
                android:textColor="@android:color/white"
                android:id="@+id/tag_tv"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/cover_iv"
                android:text="tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:id="@+id/cover_tv"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="@android:color/primary_text_light"
                android:text="@string/sample_text"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:layout_constraintTop_toBottomOf="@id/cover_iv"
                android:layout_width="wrap_content"
                android:lines="2"
                android:layout_height="wrap_content"/>

        <android.support.v7.widget.CardView
                app:cardCornerRadius="10dp"
                android:id="@+id/avatar_cv"
                android:layout_marginStart="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cover_tv"
                android:layout_marginTop="8dp"
                android:textSize="12sp"
                android:layout_width="20dp"
                android:layout_height="20dp">

            <ImageView
                    android:src="@drawable/default_avator"
                    android:id="@+id/avatar_iv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
        </android.support.v7.widget.CardView>

        <TextView
                android:layout_marginStart="2dp"
                android:textSize="12sp"
                android:text="@string/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/avatar_cv"
                app:layout_constraintLeft_toRightOf="@id/avatar_cv"
                android:id="@+id/username_tv"
                app:layout_constraintBottom_toBottomOf="@+id/avatar_cv"/>

        <TextView
                android:gravity="center"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="@id/avatar_cv"
                app:layout_constraintBottom_toBottomOf="@+id/avatar_cv"
                app:layout_constraintRight_toRightOf="parent"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:id="@+id/like_tv"/>
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>