<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="300dp"
        app:cardCornerRadius="8dp"
        android:background="@android:color/background_light"
        android:layout_height="500dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <ImageView
                android:translationZ="1dp"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/top_iv"
                android:scaleType="centerCrop"
                android:src="@drawable/login_top"
                android:layout_width="match_parent"
                android:layout_height="120dp"/>

        <TextView
                android:translationZ="1dp"
                android:layout_marginTop="48dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                android:id="@+id/title_tv"
                android:textSize="20sp"
                android:textColor="@android:color/primary_text_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_login"/>

        <ImageView
                android:id="@+id/close_im"
                android:padding="8dp"
                android:elevation="3dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="16dp"
                app:layout_constraintTop_toTopOf="@id/top_iv"
                android:src="@drawable/ic_close_black_24dp"
                android:layout_width="40dp"
                android:layout_height="40dp"/>

        <TextView
                android:id="@+id/username_title_tv"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="56dp"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@id/top_iv"
                android:text="@string/user_name"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditText

                android:inputType="textPersonName"
                android:id="@+id/username_et"
                android:layout_marginLeft="56dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="56dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/username_title_tv"
                android:layout_width="match_parent"
                android:layout_height="48dp"/>

        <TextView
                android:id="@+id/userpass_title_tv"
                android:text="@string/password"
                android:layout_marginTop="16dp"
                android:layout_marginStart="56dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/username_et"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <EditText
                android:inputType="textPassword"
                android:id="@+id/userpass_et"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/userpass_title_tv"
                android:layout_marginLeft="56dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="56dp"
                android:layout_width="match_parent"
                android:layout_height="48dp"/>


        <EditText
                android:visibility="gone"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:id="@+id/repeat_userpass_et"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/userpass_et"
                android:layout_marginLeft="56dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="56dp"
                android:layout_width="match_parent"
                android:layout_height="48dp"/>

        <androidx.cardview.widget.CardView
                android:id="@+id/login_btn"

                android:layout_marginTop="24dp"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@id/repeat_userpass_et"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                android:layout_width="match_parent"
                android:layout_marginStart="56dp"
                android:layout_marginEnd="56dp"
                android:layout_height="40dp">

            <TextView
                    android:id="@+id/login_btn_title"
                    android:layout_gravity="center"
                    android:text="登录"
                    android:textSize="16sp"
                    android:textColor="@android:color/primary_text_dark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </androidx.cardview.widget.CardView>

        <Button
                android:id="@+id/check_type_btn"
                android:layout_marginTop="16dp"
                android:background="?attr/selectableItemBackground"
                app:layout_constraintTop_toBottomOf="@id/login_btn"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="去注册"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>