<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:id="@+id/root_coor"
        android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/top_AppBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:id="@+id/top_coll"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                app:collapsedTitleGravity="left"

                app:collapsedTitleTextAppearance="@style/ToolBarTitleText"
                app:contentScrim="@color/colorPrimary"
                app:expandedTitleGravity="left|bottom"
                app:expandedTitleMarginBottom="16dp"
                app:expandedTitleMarginStart="16dp"
                app:expandedTitleTextAppearance="@style/ToolBarTitleTextBig"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:titleEnabled="false">

            <com.youth.banner.Banner
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="360dp"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7"
                    android:id="@+id/list_rv">
            </com.youth.banner.Banner>


            <androidx.appcompat.widget.Toolbar
                    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    app:titleTextAppearance="@style/ToolBarTitleText"
                    android:fitsSystemWindows="true"
                    android:layout_marginTop="24dp"
                    android:id="@+id/toolbar_tb"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin">
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:background="@android:color/white"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:orientation="vertical"

                android:layout_height="match_parent">

            <FrameLayout
                    android:id="@+id/cover_music_fl"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="48dp"
                    android:layout_height="48dp">



                <ImageView
                        android:contentDescription="@string/cover_image"
                        android:layout_margin="2dp"
                        android:id="@+id/cover_music_im"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_default"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>



                <com.nut2014.kotlintest.widget.CirclePercentView
                        android:id="@+id/progress_circular"
                        app:radius="16"
                        app:circleProgressColor="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

            </FrameLayout>

            <TextView
                    android:id="@+id/music_name_tv"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintLeft_toRightOf="@id/cover_music_fl"
                    app:layout_constraintTop_toTopOf="@id/cover_music_fl"
                    android:text="@string/music_name"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/music_artist_tv"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintLeft_toRightOf="@id/cover_music_fl"
                    app:layout_constraintTop_toBottomOf="@id/music_name_tv"
                    android:text="@string/author"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <ImageView
                    android:contentDescription="@string/comment_img"
                    android:visibility="gone"
                    android:padding="4dp"
                    android:id="@+id/comment_im"
                    android:src="@drawable/ic_comment_black_24dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"

                    app:layout_constraintHorizontal_bias="0.5"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="36dp"
                    android:layout_height="36dp"/>

            <TextView
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/comment_im"
                    android:textColor="@android:color/primary_text_light"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@+id/comment_im"
                    app:layout_constraintStart_toStartOf="@+id/comment_im"/>


            <ImageView
                    android:id="@+id/like_im"
                    android:padding="4dp"
                    android:src="@drawable/ic_favorite_border_8dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintHorizontal_bias="1"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="36dp"
                    android:layout_height="36dp"/>

            <TextView
                    android:text="0"
                    android:id="@+id/like_num_tv"
                    app:layout_constraintTop_toBottomOf="@id/like_im"
                    android:textColor="@android:color/primary_text_light"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@+id/like_im"
                    app:layout_constraintStart_toStartOf="@+id/like_im"/>

            <TextView
                    android:layout_marginTop="16dp"
                    android:text="@string/author"
                    android:layout_marginStart="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cover_music_fl"
                    android:id="@+id/author_tv"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:id="@+id/content_tv"
                    android:textColor="@android:color/primary_text_light"
                    android:text="@string/sample_text"
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    app:layout_constraintTop_toBottomOf="@id/author_tv"
                    android:layout_width="match_parent"
                    android:maxLines="100"
                    android:layout_height="wrap_content"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

